--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
   <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <title>Aula Git + GitHub</title>
+    <title>Aula 02 - Git e GitHub</title>
   </head>
   <body>
-    <h1>Aula Git + GitHub</h1>
-    <h2>Revisão 4</h2>
+    <h1>Aula 02 - Git e GitHub</h1>
+    <h2>Revisão 5</h2>
     <p>Vejo xá gritando que fez show sem playback</p>
   </body>
   </html>
